<resources>
    <string name="app_name">Dungeons and Dragons Initiative Tracker</string>
    <string name="campaign_overview_screen">Your Campaigns</string>
    <string name="add_campaign_screen">Add a New Campaign</string>
    <string name="character_overview_screen">Character Overview</string>
    <string name="encounter_builder_screen">Encounter Builder</string>
    <string name="initative_screen">Initiative</string>
    <string name="skirmish_screen">Battle</string>

    <string name="expand_button_content_description">See more or less information.</string>
    <string name="back_button">Back</string>

    <string name="to_character_overview_button">To the Character Overview Screen!</string>
    <string name="to_character_overview_screen_button">To the Character Overview Screen!</string>
    <string name="greyed_out_select_campaign_button">Please select a campaign</string>

    <string name="to_encounter_builder_screen_button">To the Encounter Builder Screen!</string>

    <string name="to_initiative_screen_button">To the Initiative Screen!</string>

    <string name="to_skirmish_screen_button">To the Battle Screen!</string>
    <string name="toEncounterBuilderButton">To the Encounter Builder!</string>
    <string name="add_new_campaign_button">Add A New Campaign</string>
    <string name="create_campaign">Create Your Campaign!</string>
    <string name="campaign_name_label">Campaign Name</string>
    <string name="number_of_participants_label">Number of Participants</string>
    <string name="increment">increment</string>
    <string name="decrement">decrement</string>
    <string name="participant_name_label">Player Name</string>
    <string name="participant_email_label">Player Email</string>
    <string name="dm_name_label">Dungeon Master Name</string>
    <string name="dm_email_label">Dungeon Master Email</string>
    <string name="add_player">Add Player</string>
    <string name="player_name_label">Player Name</string>
    <string name="player_email_label">Player Email</string>
    <string name="delete_player_icon_label">Delete Player</string>
    <string name="delete_campaign_icon_label">Delete Campaign</string>
    <string name="pick_an_image">Pick an Image</string>
    <string name="take_an_image">Take an Image</string>
    <string name="add_participants_to_campaign_screen">Add DM and Players</string>
    <string name="dm_section_title">Dungeon Master</string>
    <string name="select_enemy_title">Or, Select an Enemy:</string>
    <string name="player_section_title">Players</string>
    <string name="date_time_picker_button">Next Session?</string>
    <string name="no_next_session_planned">No next session planned.</string>
    <string name="select_player_from_contacts">Select from your contacts</string>
    <string name="loading">Loading</string>
    <string name="loading_failed">Failed to load</string>
    <string name="characters_subtitle">Primary Characters</string>
    <string name="secondary_characters_subtitle">Secondary Characters</string>
    <string name="enemies_subtitle">Enemies</string>
    <string name="search_enemies">Search for enemies</string>
    <string name="create_character">Create and add a new character</string>
    <string name="create_primary_character_screen">Create a Character</string>
    <string name="character_name_textfield">Character Name</string>
    <string name="character_armorclass_textfield">Armor Class:</string>
    <string name="character_initiative_textfield">Initiative Modifier:</string>
    <string name="decrease_armor_class">Decrease the armor class by one.</string>
    <string name="increase_armor_class">Increase the armor class by one.</string>
    <string name="decrease_initiative_modifier">Decreased the initiative modifier by one.</string>
    <string name="increase_initiative_modifier">Increase the initiative modifier by one.</string>
    <string name="primary_character">Primary Character</string>
    <string name="secondary_character">Secondary Character</string>
    <string name="enemy">Enemy</string>
    <string name="character_type">"Character Type: "</string>
    <string name="end_turn">End Turn</string>
    <string name="notification_channel_id">Next Session Notification</string>
    <string name="notification_channel_name">Next Session</string>
    <string name="notification_channel_description">A channel used to send a reminder about the next session</string>
    <string name="roll_for_initiative_icon_label">Roll for intiative</string>
    <string name="please_select_characters_button">Please select characters</string>
    <string name="plan_next_session_button_label">Plan Next Session</string>
    <string name="participant_section_title">Participants</string>
    <string name="create_campaign_disabled">Please fill in all of the required fields.</string>
</resources>